# Rubik-s-Cube-Solver

./: CMakeLists.txt  RubiksCube.h  RubiksCube1dArray.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp
PatternDatabases/: CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solvers/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
